# ydlidar_sdk_msys

./: .gitignore  CMakeLists.txt  Readme.md
include/: serial.h  ydlidar_driver.h
samples/: CMakeLists.txt
src/: CYdLidar.cpp  common.h  ydlidar_driver.cpp
src/impl/unix/: unix_serial.cpp  unix_serial.h  unix_timer.cpp
src/impl/windows/: win_serial.cpp  win_serial.h  win_timer.cpp
src/samples/: CMakeLists.txt
